@@ -15,6 +15,8 @@ section.
 * Updated the admin pages so that messages actually get displayed in the
 header.
 * Fixed error when deleting a host in the web UI.
+* Added a setup for the config checker in application.director.
+* Filled in the code for the config checker.
 
 2008.07.03 oubiwann
 
